# rust-sandbox

./: .env.example  Cargo.toml  diesel.toml
db/: rust_sandbox.db
migrations/2025-03-20-194727_create_users/: up.sql
src/: auth.rs  db.rs  error.rs  lib.rs  main.rs  test_utils.rs
src/middleware/: auth.rs
src/models/: user.rs
src/routes/: users.rs
tests/: auth_tests.rs  user_tests.rs
tests/common/: mod.rs
