[package]
name = "rust-sandbox"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
actix-web = "4.4"

# Database
diesel = { version = "2.1", features = ["sqlite", "r2d2"] }
dotenvy = "0.15"    # For loading environment variables from .env file

# Serialization/deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Logging
log = "0.4"
env_logger = "0.10"
